# ai-code-review-platform

./: .env.example  .gitignore  COLLABORATION.md  LICENSE  Makefile  README.md  SECURITY.md  ai-code-review-platform.code-workspace  tmpclaude-9138-cwd
apps/backend/: Dockerfile  ai_review.db  alembic.ini  pyproject.toml  semgrep_err.txt  semgrep_out.json
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 20260227_0001_create_analyses.py  20260227_0002_t2_schema_and_lifecycle.py  20260227_0003_analysis_progress_and_stage.py  20260227_0004_t4_unified_diff_schema.py  20260227_0005_t5_secret_scan_and_redaction.py  20260227_0006_t6_static_analysis_schema.py  20260228_0007_t6_tool_runs_tracking.py  20260228_0008_rbac_and_encrypted_secrets.py  20260301_0009_f4_change_classification.py  20260301_0010_f3_analysis_summary.py  20260306_0011_organizations.py
apps/backend/app/: main.py  settings.py
apps/backend/app/api/: deps.py  errors.py
apps/backend/app/api/http/: analyses.py  webhook_github.py
apps/backend/app/api/middleware/: auth.py
apps/backend/app/core/change_classification/: __init__.py  dtos.py  service.py
apps/backend/app/data/: database.py
apps/backend/app/workers/: celery_app.py  queue.py
apps/backend/t6_manual/: demo.py  run_t6_test.py
apps/backend/tests/: test_analyses.py  test_webhook.py
apps/backend/tests/unit/: test_auth_middleware.py  test_change_classifier.py  test_github_client_auth.py  test_rbac_auth.py  test_secret_scanner.py  test_secret_store.py  test_static_analysis.py  test_summary_service.py  test_unified_diff_parser.py
(+133 files in other folders)
