[tool.poetry]
name = "ai-code-review-backend"
version = "0.1.0"
description = "Backend service (FastAPI)"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
uvicorn = "^0.22"
psycopg = {version = "^3.2.10", extras = ["binary"]}
psycopg-pool = "^3.2.2"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
celery = "^5.4.0"
redis = "^5.0.8"
ruff = "^0.13.0"
semgrep = "^1.132.0"
setuptools = "<81"
